Fix deprecation warnings in Elevator and Zoning classes